<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.macwojs.obsypka.MainActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <LinearLayout
            style="@style/linear_layout_wyniki"
            >
            <TextView
                style="@style/text_edit_wyniki"
                android:text="@string/masa"
                />
            <TextView
                android:id="@+id/masa_text"
                style="@style/text_edit_wyniki"
                tools:text="1123,12"
                />
            <TextView
                style="@style/text_edit_wyniki"
                android:text="@string/jed_masa"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_layout_wyniki"
            >
            <TextView
                style="@style/text_edit_wyniki"
                android:text="@string/obj"
                />
            <TextView
                android:id="@+id/obj_text"
                style="@style/text_edit_wyniki"
                tools:text="1123,12"
                />
            <TextView
                style="@style/text_edit_wyniki"
                android:text="@string/jed_obj"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_layout_wyniki"
            android:layout_marginTop="40dp"
            >
            <TextView
                style="@style/text_edit_wyniki"
                android:text="@string/masa1mb"
                />
            <TextView
                android:id="@+id/masa1mb_text"
                style="@style/text_edit_wyniki"
                tools:text="1123,12"
                />
            <TextView
                style="@style/text_edit_wyniki"
                android:text="@string/jed_masa"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_layout_wyniki"
            >
            <TextView
                style="@style/text_edit_wyniki"
                android:text="@string/obj1mb"
                />
            <TextView
                android:id="@+id/obj1mb_text"
                style="@style/text_edit_wyniki"
                tools:text="1123,12"
                />
            <TextView
                style="@style/text_edit_wyniki"
                android:text="@string/jed_obj1mb"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>