<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.macwojs.obsypka.MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_marginTop="16dp"
            style="@style/tytul_wymiary"
            android:text="@string/material"/>

        <Spinner
            android:id="@+id/wyb_mat"
            style="@style/material_spinner"
            android:entries="@array/material_array"/>

        <TextView
            style="@style/tytul_wymiary"
            android:text="@string/sr_otw"/>
        <LinearLayout
            style="@style/linear_layout_wprowadzanie">
            <EditText
                android:id="@+id/sr_otw"
                style="@style/wprowadzanie_wymiary"
                android:hint="@string/sr_otw"/>
            <Spinner
                android:id="@+id/wyb_jed_otw"
                style="@style/wybieranie_jednostki"
                android:entries="@array/jed_array"/>
        </LinearLayout>

        <TextView
            style="@style/tytul_wymiary"
            android:text="@string/sr_fil"/>
        <LinearLayout
            style="@style/linear_layout_wprowadzanie">
            <EditText
                android:id="@+id/sr_fil"
                style="@style/wprowadzanie_wymiary"
                android:hint="@string/sr_fil"/>
            <Spinner
                android:id="@+id/wyb_jed_fil"
                style="@style/wybieranie_jednostki"
                android:entries="@array/jed_array"/>
        </LinearLayout>

        <TextView
            style="@style/tytul_wymiary"
            android:text="@string/d_obs"/>
        <LinearLayout
            style="@style/linear_layout_wprowadzanie">
            <EditText
                android:id="@+id/d_obs"
                style="@style/wprowadzanie_wymiary"
                android:hint="@string/d_obs"/>
            <Spinner
                android:id="@+id/wyb_jed_obs"
                style="@style/wybieranie_jednostki"
                android:entries="@array/jed_array_dl" />
        </LinearLayout>

        <Button
            style="@style/guzik_oblicz"
            android:text="@string/oblicz"
            android:onClick="oblicz"/>
    </LinearLayout>
</ScrollView>